<resources>
    <string name="app_name">LionsApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="view_list">View current Lions</string>
    <string name="add_lion">Add a new Lion</string>
    <string name="view_child">View this parent\'s child</string>
    <string name="call_parent">Call this parent</string>
    <string name="text_parent">Text this parent</string>

    <string name="child_fName">First name:</string>
    <string name="child_lName">Last name:</string>
    <string name="child_pName">Parent name:</string>
    <string name="parent_phoneNumber">Parent phone number:</string>
    <string name="child_bday">Child\'s birthday:</string>

    <string name="dateFormat">dd/mm/yyyy</string>

    <string name="welcome_Kim">Welcome, Miss Kimberly</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
